Revert "Interpolate using kalman"
This reverts commit 24690b4be00ce3922c01423ab7f823ac7efbd04e.

--- a/notebooks/aruco-phone.ipynb
+++ b/notebooks/aruco-phone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Done — with margin only on valid frames, and fallback only when needed.\n"
+      "Done. Saved to aruco_green_overlay.mp4\n"
      ]
     }
    ],
@@ -50,13 +50,13 @@
     "detector = cv2.aruco.ArucoDetector(dictionary, parameters)\n",
     "\n",
     "expected_ids = [0, 1, 2, 3]\n",
-    "margin = 10\n",
     "marker_size = 80\n",
+    "margin = 10\n",
     "\n",
-    "last_screen_pts = None\n",
     "\n",
     "def shift_corner(corner, dx, dy):\n",
     "    return np.array([corner[0] + dx, corner[1] + dy])\n",
+    "\n",
     "\n",
     "while cap.isOpened():\n",
     "    ret, frame = cap.read()\n",
@@ -66,44 +66,38 @@
     "    overlay = frame.copy()\n",
     "    corners, ids, _ = detector.detectMarkers(frame)\n",
     "\n",
-    "    screen_pts = None\n",
-    "    has_full_detection = False\n",
-    "\n",
     "    if ids is not None and len(ids) >= 4:\n",
     "        detected = {int(id_): corners[i][0] for i, id_ in enumerate(ids.flatten()) if int(id_) in expected_ids}\n",
     "\n",
     "        if all(k in detected for k in expected_ids):\n",
-    "            # Get corners of each marker\n",
-    "            tl = shift_corner(detected[0][0], -margin, -margin)  # top-left corner of ID 0\n",
-    "            tr = shift_corner(detected[1][1], margin, -margin)   # top-right corner of ID 1\n",
-    "            br = shift_corner(detected[2][2], margin, margin)    # bottom-right corner of ID 2\n",
-    "            bl = shift_corner(detected[3][3], -margin, margin)   # bottom-left corner of ID 3\n",
+    "            # Use known corners and apply outward offset\n",
+    "            # Marker 0: use corner 0 (top-left) -> shift (-margin, -margin)\n",
+    "            # Marker 1: use corner 1 (top-right) -> shift (+margin, -margin)\n",
+    "            # Marker 2: use corner 2 (bottom-right) -> shift (+margin, +margin)\n",
+    "            # Marker 3: use corner 3 (bottom-left) -> shift (-margin, +margin)\n",
     "\n",
-    "            screen_pts = np.array([tl, tr, br, bl], dtype=np.float32)\n",
-    "            last_screen_pts = screen_pts.copy()\n",
-    "            has_full_detection = True\n",
-    "        else:\n",
-    "            screen_pts = last_screen_pts\n",
-    "    else:\n",
-    "        screen_pts = last_screen_pts\n",
+    "            tl = shift_corner(detected[0][0], -margin, -margin)\n",
+    "            tr = shift_corner(detected[1][1], margin, -margin)\n",
+    "            br = shift_corner(detected[2][2], margin, margin)\n",
+    "            bl = shift_corner(detected[3][3], -margin, margin)\n",
     "\n",
-    "    if screen_pts is not None:\n",
-    "        screen_pts_int = screen_pts.astype(np.int32)\n",
-    "        green_overlay = np.zeros_like(frame)\n",
-    "        cv2.fillPoly(green_overlay, [screen_pts_int], (0, 255, 0))\n",
+    "            screen_pts = np.array([tl, tr, br, bl], dtype=np.int32)\n",
     "\n",
-    "        alpha = 0.3\n",
-    "        overlay = cv2.addWeighted(frame, 1 - alpha, green_overlay, alpha, 0)\n",
+    "            # Draw green overlay\n",
+    "            green_overlay = np.zeros_like(frame)\n",
+    "            cv2.fillPoly(green_overlay, [screen_pts], (0, 255, 0))\n",
     "\n",
-    "        # Draw boundary only when detection was fresh (for debug)\n",
-    "        color = (0, 255, 0) if has_full_detection else (0, 180, 255)\n",
-    "        cv2.polylines(overlay, [screen_pts_int], True, color, 2)\n",
+    "            alpha = 0.3\n",
+    "            overlay = cv2.addWeighted(frame, 1 - alpha, green_overlay, alpha, 0)\n",
+    "\n",
+    "            # Draw polygon outline\n",
+    "            cv2.polylines(overlay, [screen_pts], True, (0, 255, 0), 2)\n",
     "\n",
     "    out.write(overlay)\n",
     "\n",
     "cap.release()\n",
     "out.release()\n",
-    "print(\"✅ Done — with margin only on valid frames, and fallback only when needed.\")\n"
+    "print(\"Done. Saved to aruco_green_overlay.mp4\")\n"
    ]
   }
  ],
