--- a/notebooks/aruco-phone.ipynb
+++ b/notebooks/aruco-phone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done. Saved to aruco_green_overlay.mp4\n"
+      "finished → aruco_green_overlay.mp4\n"
      ]
     }
    ],
@@ -37,67 +37,91 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "cap = cv2.VideoCapture(\"aruco.mp4\")\n",
+    "VIDEO_IN = \"aruco.mp4\"\n",
+    "VIDEO_OUT = \"aruco_green_overlay.mp4\"\n",
+    "\n",
+    "DICT = cv2.aruco.DICT_4X4_50\n",
+    "EXPECTED_IDS = [0, 1, 2, 3]  # TL-TR-BR-BL by your generator\n",
+    "MARGIN_PX = 10  # same as generator\n",
+    "ALPHA = 0.30  # overlay transparency\n",
+    "\n",
+    "# ───────────── video info ─────────────\n",
+    "cap = cv2.VideoCapture(VIDEO_IN)\n",
     "fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "frame_w = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "frame_h = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "w = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "h = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "N = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "cap.release()\n",
     "\n",
-    "fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
-    "out = cv2.VideoWriter(\"aruco_green_overlay.mp4\", fourcc, fps, (frame_w, frame_h))\n",
-    "\n",
-    "dictionary = cv2.aruco.getPredefinedDictionary(cv2.aruco.DICT_4X4_50)\n",
-    "parameters = cv2.aruco.DetectorParameters()\n",
-    "detector = cv2.aruco.ArucoDetector(dictionary, parameters)\n",
-    "\n",
-    "expected_ids = [0, 1, 2, 3]\n",
-    "marker_size = 80\n",
-    "margin = 10\n",
+    "# ─────────── detector ───────────\n",
+    "dictionary = cv2.aruco.getPredefinedDictionary(DICT)\n",
+    "detector = cv2.aruco.ArucoDetector(dictionary, cv2.aruco.DetectorParameters())\n",
     "\n",
     "\n",
-    "def shift_corner(corner, dx, dy):\n",
-    "    return np.array([corner[0] + dx, corner[1] + dy])\n",
+    "# helper to shift a marker-corner by the known margin\n",
+    "def shift(pt, dx, dy):\n",
+    "    return np.array([pt[0] + dx, pt[1] + dy], dtype=np.float32)\n",
     "\n",
     "\n",
-    "while cap.isOpened():\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
+    "# 1) pass: collect raw corner measurements  (NaN for “missing”)\n",
+    "tracks = np.full((N, 4, 2), np.nan, dtype=np.float32)  # frame × corner × xy\n",
+    "corner_map = {  # which marker-corner belongs to which screen corner\n",
+    "    0: (0, (-MARGIN_PX, -MARGIN_PX)),  # TL  from marker-corner 0\n",
+    "    1: (1, (MARGIN_PX, -MARGIN_PX)),  # TR  from marker-corner 1\n",
+    "    2: (2, (MARGIN_PX, MARGIN_PX)),  # BR  from marker-corner 2\n",
+    "    3: (3, (-MARGIN_PX, MARGIN_PX)),  # BL  from marker-corner 3\n",
+    "}\n",
+    "\n",
+    "cap = cv2.VideoCapture(VIDEO_IN)\n",
+    "for f in range(N):\n",
+    "    ok, frame = cap.read()\n",
+    "    if not ok:\n",
     "        break\n",
     "\n",
-    "    overlay = frame.copy()\n",
     "    corners, ids, _ = detector.detectMarkers(frame)\n",
+    "    if ids is None:\n",
+    "        continue\n",
     "\n",
-    "    if ids is not None and len(ids) >= 4:\n",
-    "        detected = {int(id_): corners[i][0] for i, id_ in enumerate(ids.flatten()) if int(id_) in expected_ids}\n",
+    "    for idx, mid in enumerate(ids.flatten()):\n",
+    "        if mid in corner_map:\n",
+    "            c_idx, (dx, dy) = corner_map[mid]\n",
+    "            pt = shift(corners[idx][0][c_idx], dx, dy)  # use the matching marker-corner\n",
+    "            tracks[f, c_idx] = pt\n",
+    "cap.release()\n",
     "\n",
-    "        if all(k in detected for k in expected_ids):\n",
-    "            # Use known corners and apply outward offset\n",
-    "            # Marker 0: use corner 0 (top-left) -> shift (-margin, -margin)\n",
-    "            # Marker 1: use corner 1 (top-right) -> shift (+margin, -margin)\n",
-    "            # Marker 2: use corner 2 (bottom-right) -> shift (+margin, +margin)\n",
-    "            # Marker 3: use corner 3 (bottom-left) -> shift (-margin, +margin)\n",
+    "# 1½) interpolate each corner track (x and y separately)\n",
+    "for corner in range(4):\n",
+    "    for dim in range(2):  # x then y\n",
+    "        seq = tracks[:, corner, dim]\n",
+    "        mask = ~np.isnan(seq)\n",
+    "        if not mask.any():  # never happened, but be safe\n",
+    "            continue\n",
+    "        valid_idx = np.where(mask)[0]\n",
+    "        valid_vals = seq[mask]\n",
+    "        full_idx = np.arange(N)\n",
+    "        seq[:] = np.interp(full_idx, valid_idx, valid_vals)\n",
     "\n",
-    "            tl = shift_corner(detected[0][0], -margin, -margin)\n",
-    "            tr = shift_corner(detected[1][1], margin, -margin)\n",
-    "            br = shift_corner(detected[2][2], margin, margin)\n",
-    "            bl = shift_corner(detected[3][3], -margin, margin)\n",
+    "# 2) pass: draw result\n",
+    "fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
+    "out = cv2.VideoWriter(VIDEO_OUT, fourcc, fps, (w, h))\n",
     "\n",
-    "            screen_pts = np.array([tl, tr, br, bl], dtype=np.int32)\n",
+    "cap = cv2.VideoCapture(VIDEO_IN)\n",
+    "for f in range(N):\n",
+    "    ok, frame = cap.read()\n",
+    "    if not ok:\n",
+    "        break\n",
     "\n",
-    "            # Draw green overlay\n",
-    "            green_overlay = np.zeros_like(frame)\n",
-    "            cv2.fillPoly(green_overlay, [screen_pts], (0, 255, 0))\n",
+    "    quad = tracks[f].astype(np.int32)\n",
+    "    green = np.zeros_like(frame)\n",
+    "    cv2.fillPoly(green, [quad], (0, 255, 0))\n",
+    "    frame = cv2.addWeighted(frame, 1 - ALPHA, green, ALPHA, 0)\n",
+    "    cv2.polylines(frame, [quad], True, (0, 255, 0), 2)\n",
     "\n",
-    "            alpha = 0.3\n",
-    "            overlay = cv2.addWeighted(frame, 1 - alpha, green_overlay, alpha, 0)\n",
-    "\n",
-    "            # Draw polygon outline\n",
-    "            cv2.polylines(overlay, [screen_pts], True, (0, 255, 0), 2)\n",
-    "\n",
-    "    out.write(overlay)\n",
+    "    out.write(frame)\n",
     "\n",
     "cap.release()\n",
     "out.release()\n",
-    "print(\"Done. Saved to aruco_green_overlay.mp4\")\n"
+    "print(\"finished →\", VIDEO_OUT)\n"
    ]
   }
  ],
