--- a/notebooks/aruco-phone.ipynb
+++ b/notebooks/aruco-phone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -22,106 +22,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished → aruco_green_overlay.mp4\n"
+      "✅  Finished – written to aruco_green_overlay.mp4\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
+    "# Cell: find-QR-then-overlay\n",
+    "import cv2, json, numpy as np, logging, math, os\n",
     "\n",
-    "VIDEO_IN = \"aruco.mp4\"\n",
-    "VIDEO_OUT = \"aruco_green_overlay.mp4\"\n",
+    "# ── files ───────────────────────────────────────────────────────────\n",
+    "VIDEO_IN  = \"aruco.mp4\"                 # input clip\n",
+    "VIDEO_OUT = \"aruco_green_overlay.mp4\"   # output with overlay\n",
     "\n",
-    "DICT = cv2.aruco.DICT_4X4_50\n",
-    "EXPECTED_IDS = [0, 1, 2, 3]  # TL-TR-BR-BL by your generator\n",
-    "MARGIN_PX = 10  # same as generator\n",
-    "ALPHA = 0.30  # overlay transparency\n",
+    "# ── logging ─────────────────────────────────────────────────────────\n",
+    "logging.basicConfig(filename=\"aruco_debug.log\",\n",
+    "                    filemode=\"w\",\n",
+    "                    level=logging.DEBUG,\n",
+    "                    format=\"%(message)s\")\n",
+    "log = logging.getLogger(\"aruco\")\n",
     "\n",
-    "# ───────────── video info ─────────────\n",
+    "# ═════════ 1st pass : hunt for the QR with metadata ═════════════════\n",
     "cap = cv2.VideoCapture(VIDEO_IN)\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "w = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "h = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "N = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "cap.release()\n",
+    "qr   = cv2.QRCodeDetector()\n",
     "\n",
-    "# ─────────── detector ───────────\n",
-    "dictionary = cv2.aruco.getPredefinedDictionary(DICT)\n",
+    "meta = None\n",
+    "while True:\n",
+    "    ok, frame = cap.read()\n",
+    "    if not ok:                                      # end-of-video\n",
+    "        break\n",
+    "    payload, *_ = qr.detectAndDecode(frame)\n",
+    "    if payload:\n",
+    "        try:\n",
+    "            meta = json.loads(payload)\n",
+    "        except json.JSONDecodeError:\n",
+    "            raise RuntimeError(\"QR decoded but payload is not valid JSON\")\n",
+    "        break                                       # stop at first good QR\n",
+    "\n",
+    "if meta is None:\n",
+    "    raise RuntimeError(\"No metadata QR code found in the entire video\")\n",
+    "\n",
+    "# ── verify mandatory keys in the JSON ───────────────────────────────\n",
+    "need = {\"dictionary\", \"marker_size_px\", \"margin_px\",\n",
+    "        \"corner_markers\", \"screen_aspect\"}\n",
+    "missing = need - meta.keys()\n",
+    "if missing:\n",
+    "    raise RuntimeError(f\"QR metadata missing keys: {missing}\")\n",
+    "\n",
+    "# ═════════ constants derived ONLY from the QR ═══════════════════════\n",
+    "aruco_dict_name = meta[\"dictionary\"]\n",
+    "dictionary      = cv2.aruco.getPredefinedDictionary(\n",
+    "                      getattr(cv2.aruco, aruco_dict_name))\n",
+    "margin_px  = int(meta[\"margin_px\"])\n",
+    "BASE_RATIO = float(meta[\"screen_aspect\"])\n",
+    "\n",
+    "# corner mapping  — ID → (internal-corner-idx, (dx,dy shift))\n",
+    "sign = {\"TL\":(-1,-1), \"TR\":(1,-1), \"BR\":(1,1), \"BL\":(-1,1)}\n",
+    "corner_map = {}\n",
+    "for lbl in (\"TL\",\"TR\",\"BR\",\"BL\"):\n",
+    "    info = meta[\"corner_markers\"][lbl]\n",
+    "    corner_map[info[\"id\"]] = (info[\"corner_index\"],\n",
+    "                              (sign[lbl][0]*margin_px,\n",
+    "                               sign[lbl][1]*margin_px))\n",
+    "\n",
+    "# heuristics scale with marker size\n",
+    "marker_sz  = int(meta[\"marker_size_px\"])\n",
+    "JUMP_PX    = max(marker_sz//2, 20)\n",
+    "OUTLIER_PX = max(marker_sz//3, 10)\n",
+    "MAX_STEP_PX= max(marker_sz//10, 4)\n",
+    "RATIO_TOL  = 0.10                         # keep ±10 %\n",
+    "\n",
+    "# ═════════ 2nd pass : full tracking & drawing ═══════════════════════\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "w   = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "h   = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "N   = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "cap.set(cv2.CAP_PROP_POS_FRAMES, 0)       # rewind\n",
+    "\n",
     "detector = cv2.aruco.ArucoDetector(dictionary, cv2.aruco.DetectorParameters())\n",
     "\n",
-    "\n",
-    "# helper to shift a marker-corner by the known margin\n",
     "def shift(pt, dx, dy):\n",
-    "    return np.array([pt[0] + dx, pt[1] + dy], dtype=np.float32)\n",
+    "    return np.array([pt[0]+dx, pt[1]+dy], np.float32)\n",
     "\n",
+    "tracks    = np.full((N,4,2), np.nan, np.float32)\n",
+    "last_good = [None]*4\n",
     "\n",
-    "# 1) pass: collect raw corner measurements  (NaN for “missing”)\n",
-    "tracks = np.full((N, 4, 2), np.nan, dtype=np.float32)  # frame × corner × xy\n",
-    "corner_map = {  # which marker-corner belongs to which screen corner\n",
-    "    0: (0, (-MARGIN_PX, -MARGIN_PX)),  # TL  from marker-corner 0\n",
-    "    1: (1, (MARGIN_PX, -MARGIN_PX)),  # TR  from marker-corner 1\n",
-    "    2: (2, (MARGIN_PX, MARGIN_PX)),  # BR  from marker-corner 2\n",
-    "    3: (3, (-MARGIN_PX, MARGIN_PX)),  # BL  from marker-corner 3\n",
-    "}\n",
-    "\n",
-    "cap = cv2.VideoCapture(VIDEO_IN)\n",
+    "# ── pass 2a : collect / clean measurements ──────────────────────────\n",
     "for f in range(N):\n",
-    "    ok, frame = cap.read()\n",
-    "    if not ok:\n",
-    "        break\n",
-    "\n",
-    "    corners, ids, _ = detector.detectMarkers(frame)\n",
-    "    if ids is None:\n",
-    "        continue\n",
-    "\n",
+    "    ok, frm = cap.read()\n",
+    "    if not ok: break\n",
+    "    corners, ids, _ = detector.detectMarkers(frm)\n",
+    "    if ids is None: continue\n",
     "    for idx, mid in enumerate(ids.flatten()):\n",
-    "        if mid in corner_map:\n",
-    "            c_idx, (dx, dy) = corner_map[mid]\n",
-    "            pt = shift(corners[idx][0][c_idx], dx, dy)  # use the matching marker-corner\n",
-    "            tracks[f, c_idx] = pt\n",
-    "cap.release()\n",
+    "        if mid not in corner_map: continue\n",
+    "        c,(dx,dy) = corner_map[mid]\n",
+    "        raw = shift(corners[idx][0][c], dx, dy)\n",
+    "        if last_good[c] is not None and np.linalg.norm(raw-last_good[c]) > JUMP_PX:\n",
+    "            continue                              # spike → ignore\n",
+    "        tracks[f,c] = raw\n",
+    "        last_good[c] = raw\n",
     "\n",
-    "# 1½) interpolate each corner track (x and y separately)\n",
-    "for corner in range(4):\n",
-    "    for dim in range(2):  # x then y\n",
-    "        seq = tracks[:, corner, dim]\n",
-    "        mask = ~np.isnan(seq)\n",
-    "        if not mask.any():  # never happened, but be safe\n",
+    "# kill single-frame spikes, then linear-interpolate gaps\n",
+    "for k in range(4):\n",
+    "    seq = tracks[:,k,:]\n",
+    "    for f in range(1,N-1):\n",
+    "        if np.isnan(seq[f]).any() or np.isnan(seq[f-1]).any() or np.isnan(seq[f+1]).any():\n",
     "            continue\n",
-    "        valid_idx = np.where(mask)[0]\n",
-    "        valid_vals = seq[mask]\n",
-    "        full_idx = np.arange(N)\n",
-    "        seq[:] = np.interp(full_idx, valid_idx, valid_vals)\n",
+    "        if np.linalg.norm(seq[f]-(seq[f-1]+seq[f+1])/2) > OUTLIER_PX:\n",
+    "            seq[f] = np.nan\n",
+    "    tracks[:,k] = seq\n",
+    "    for d in range(2):\n",
+    "        s, m = tracks[:,k,d], ~np.isnan(tracks[:,k,d])\n",
+    "        if m.any():\n",
+    "            tracks[:,k,d] = np.interp(np.arange(N), np.where(m)[0], s[m])\n",
     "\n",
-    "# 2) pass: draw result\n",
+    "# ── pass 2b : draw overlay with snap-back & clamp ───────────────────\n",
     "fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
-    "out = cv2.VideoWriter(VIDEO_OUT, fourcc, fps, (w, h))\n",
+    "out    = cv2.VideoWriter(VIDEO_OUT, fourcc, fps, (w,h))\n",
+    "cap.set(cv2.CAP_PROP_POS_FRAMES, 0)       # rewind again\n",
+    "prev_draw = None\n",
+    "ALPHA = 0.30\n",
     "\n",
-    "cap = cv2.VideoCapture(VIDEO_IN)\n",
     "for f in range(N):\n",
     "    ok, frame = cap.read()\n",
-    "    if not ok:\n",
-    "        break\n",
+    "    if not ok: break\n",
+    "    quad = tracks[f].copy()\n",
     "\n",
-    "    quad = tracks[f].astype(np.int32)\n",
-    "    green = np.zeros_like(frame)\n",
-    "    cv2.fillPoly(green, [quad], (0, 255, 0))\n",
-    "    frame = cv2.addWeighted(frame, 1 - ALPHA, green, ALPHA, 0)\n",
-    "    cv2.polylines(frame, [quad], True, (0, 255, 0), 2)\n",
+    "    # aspect-ratio snap using TL = TR + BL – BR\n",
+    "    w_now = (np.linalg.norm(quad[1]-quad[0])+np.linalg.norm(quad[2]-quad[3]))*0.5\n",
+    "    h_now = (np.linalg.norm(quad[3]-quad[0])+np.linalg.norm(quad[2]-quad[1]))*0.5\n",
+    "    if h_now>0 and abs(w_now/h_now - BASE_RATIO) > BASE_RATIO*RATIO_TOL:\n",
+    "        alt_tl = quad[1] + quad[3] - quad[2]\n",
+    "        w_alt  = (np.linalg.norm(quad[1]-alt_tl)+np.linalg.norm(quad[2]-quad[3]))*0.5\n",
+    "        h_alt  = (np.linalg.norm(quad[3]-alt_tl)+np.linalg.norm(quad[2]-quad[1]))*0.5\n",
+    "        if h_alt>0 and abs(w_alt/h_alt - BASE_RATIO) < abs(w_now/h_now - BASE_RATIO):\n",
+    "            quad[0] = alt_tl\n",
     "\n",
+    "    # gentle per-frame clamp\n",
+    "    if prev_draw is not None:\n",
+    "        for i in range(4):\n",
+    "            move = quad[i]-prev_draw[i]\n",
+    "            d = np.linalg.norm(move)\n",
+    "            if d > MAX_STEP_PX:\n",
+    "                quad[i] = prev_draw[i] + move/d*MAX_STEP_PX\n",
+    "    prev_draw = quad\n",
+    "\n",
+    "    # draw\n",
+    "    overlay = frame.copy()\n",
+    "    cv2.fillPoly(overlay, [quad.astype(np.int32)], (0,255,0))\n",
+    "    frame = cv2.addWeighted(frame, 1-ALPHA, overlay, ALPHA, 0)\n",
+    "    cv2.polylines(frame, [quad.astype(np.int32)], True, (0,255,0), 2)\n",
     "    out.write(frame)\n",
     "\n",
-    "cap.release()\n",
-    "out.release()\n",
-    "print(\"finished →\", VIDEO_OUT)\n"
+    "cap.release(); out.release()\n",
+    "print(\"✅  Finished – written to\", VIDEO_OUT)\n"
    ]
   }
  ],
