Okay i guess thats it

--- a/notebooks/repaint.ipynb
+++ b/notebooks/repaint.ipynb
@@ -2,103 +2,174 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅  Media burned in – saved to screen_with_media.mp4\n"
+      "✅  Media burned-in with tiny edge-blur — saved to screen_with_media.mp4\n"
      ]
     }
    ],
    "source": [
-    "# %% ---------------- centre-aligned, over-scaled media replacement ----------------\n",
-    "import cv2, json, numpy as np, logging, math, pathlib\n",
+    "# fast screen replacement with colour + texture harmonisation\n",
+    "# and *minimal* edge-antialias blur (no fade)\n",
+    "# -----------------------------------------------------------\n",
+    "import cv2\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import logging\n",
+    "import math\n",
+    "from skimage.exposure import match_histograms\n",
     "\n",
-    "# ── files ──────────────────────────────────────────────────────────────\n",
-    "TRACK_JSON = \"aruco_screen_tracks.json\"   # produced by the tracker\n",
-    "VIDEO_IN   = \"aruco.mp4\"                  # original recording\n",
-    "MEDIA_IMG  = \"media.png\"                  # picture to show on screen\n",
-    "VIDEO_OUT  = \"screen_with_media.mp4\"      # result\n",
-    "ALPHA      = 0.0                          # 0 = full replace; >0 = faint underlay\n",
+    "TRACK_JSON = \"aruco_screen_tracks.json\"\n",
+    "VIDEO_IN = \"aruco.mp4\"\n",
+    "MEDIA_IMG = \"simono.jpg\"\n",
+    "VIDEO_OUT = \"screen_with_media.mp4\"\n",
     "\n",
-    "# ── debug log (optional) ───────────────────────────────────────────────\n",
-    "logging.basicConfig(filename=\"replace_debug.log\",\n",
-    "                    filemode=\"w\", level=logging.DEBUG, format=\"%(message)s\")\n",
+    "# ─ look-&-feel dials ──────────────────────────────────────\n",
+    "ALPHA = 0.0  # global fade 0-1\n",
+    "CT_STRENGTH = 0.42  # chroma/contrast transfer\n",
+    "HM_STRENGTH = 0.13  # luminance histogram blend\n",
+    "FEATHER_PX = 2  # σ of tiny Gaussian edge blur (anti-alias)\n",
+    "MAX_BLUR_PX = 3.0  # cap for soft-blur\n",
+    "NOISE_GAIN = 1.0  # 1 = match screen grain\n",
+    "\n",
+    "# ─ logging (optional) ────────────────────────────────────\n",
+    "logging.basicConfig(\n",
+    "    filename=\"replace_debug.log\",\n",
+    "    filemode=\"w\",\n",
+    "    level=logging.DEBUG,\n",
+    "    format=\"%(message)s\",\n",
+    ")\n",
     "log = logging.getLogger(\"replace\")\n",
     "\n",
-    "# ═══ 1.  load tracking JSON ════════════════════════════════════════════\n",
-    "with open(TRACK_JSON, \"r\", encoding=\"utf-8\") as f:\n",
-    "    meta = json.load(f)\n",
     "\n",
+    "# ═ helpers ═══════════════════════════════════════════════\n",
+    "def get_mean_and_std(x):\n",
+    "    m, s = cv2.meanStdDev(x)\n",
+    "    return np.hstack(m).astype(np.float32), np.hstack(s).astype(np.float32)\n",
+    "\n",
+    "\n",
+    "def color_transfer(src, tgt, s):\n",
+    "    if s <= 0:\n",
+    "        return src\n",
+    "    src_lab = cv2.cvtColor(src, cv2.COLOR_BGR2LAB).astype(np.float32)\n",
+    "    tgt_lab = cv2.cvtColor(tgt, cv2.COLOR_BGR2LAB).astype(np.float32)\n",
+    "    m0, s0 = get_mean_and_std(src_lab)\n",
+    "    m1, s1 = get_mean_and_std(tgt_lab)\n",
+    "    s0[s0 == 0] = 1.0\n",
+    "    scaled = (src_lab - m0) * (s1 / s0) + m1\n",
+    "    out = cv2.addWeighted(src_lab, 1 - s, scaled, s, 0)\n",
+    "    return cv2.cvtColor(out.clip(0, 255).astype(np.uint8), cv2.COLOR_LAB2BGR)\n",
+    "\n",
+    "\n",
+    "def match_luminance(src, tgt, s):\n",
+    "    if s <= 0:\n",
+    "        return src\n",
+    "    sl = cv2.cvtColor(src, cv2.COLOR_BGR2LAB)\n",
+    "    tl = cv2.cvtColor(tgt, cv2.COLOR_BGR2LAB)\n",
+    "    matched = match_histograms(sl[..., 0], tl[..., 0], channel_axis=None)\n",
+    "    blend = cv2.addWeighted(\n",
+    "        sl[..., 0].astype(np.float32), 1 - s, matched.astype(np.float32), s, 0\n",
+    "    )\n",
+    "    sl[..., 0] = np.clip(blend, 0, 255).astype(np.uint8)\n",
+    "    return cv2.cvtColor(sl, cv2.COLOR_LAB2BGR)\n",
+    "\n",
+    "\n",
+    "def est_sharp(i):\n",
+    "    return cv2.Laplacian(i, cv2.CV_32F).var()\n",
+    "\n",
+    "\n",
+    "def harmonise_texture(patch, ref, max_blur_px, noise_gain):\n",
+    "    sp, sr = est_sharp(patch), est_sharp(ref)\n",
+    "    if sp > sr:\n",
+    "        sigma = min(max_blur_px, 0.7 * math.sqrt(sp / sr - 1))\n",
+    "        if sigma > 0.4:\n",
+    "            patch = cv2.GaussianBlur(patch, (0, 0), sigma)\n",
+    "    ref_blur = cv2.GaussianBlur(ref, (0, 0), 3)\n",
+    "    n_std = noise_gain * (ref.astype(np.int16) - ref_blur.astype(np.int16)).std()\n",
+    "    if n_std > 0.5:\n",
+    "        noise = np.random.normal(0, n_std, patch.shape).astype(np.float32)\n",
+    "        patch = np.clip(patch.astype(np.float32) + noise, 0, 255).astype(np.uint8)\n",
+    "    return patch\n",
+    "\n",
+    "\n",
+    "def sample_screen(frame, dst, size):\n",
+    "    pw, ph = size\n",
+    "    src_q = np.array([[0, 0], [pw - 1, 0], [pw - 1, ph - 1], [0, ph - 1]], np.float32)\n",
+    "    H = cv2.getPerspectiveTransform(dst, src_q)\n",
+    "    return cv2.warpPerspective(frame, H, (pw, ph), flags=cv2.INTER_LINEAR)\n",
+    "\n",
+    "\n",
+    "def build_patch_mask(h, w, sigma):\n",
+    "    \"\"\"255 rectangle blurred by tiny σ for anti-alias.\"\"\"\n",
+    "    mask = np.full((h, w), 255, np.uint8)\n",
+    "    if sigma > 0:\n",
+    "        mask = cv2.GaussianBlur(mask, (0, 0), sigma)\n",
+    "    return mask\n",
+    "\n",
+    "\n",
+    "# ═ I/O ═══════════════════════════════════════════════════\n",
+    "with open(TRACK_JSON) as f:\n",
+    "    meta = json.load(f)\n",
     "frames = meta[\"frames\"]\n",
     "FW, FH = meta[\"frame_width\"], meta[\"frame_height\"]\n",
     "\n",
-    "# ═══ 2.  open video & media image ═════════════════════════════════════\n",
-    "cap  = cv2.VideoCapture(VIDEO_IN)\n",
-    "fps  = cap.get(cv2.CAP_PROP_FPS)\n",
-    "four = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
-    "out  = cv2.VideoWriter(VIDEO_OUT, four, fps, (FW, FH))\n",
+    "cap = cv2.VideoCapture(VIDEO_IN)\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "out = cv2.VideoWriter(VIDEO_OUT, cv2.VideoWriter_fourcc(*\"mp4v\"), fps, (FW, FH))\n",
     "\n",
     "media = cv2.imread(MEDIA_IMG)\n",
-    "if media is None:\n",
-    "    raise RuntimeError(f\"Cannot read {MEDIA_IMG}\")\n",
     "mh, mw = media.shape[:2]\n",
-    "\n",
-    "# reusable 4-point source quad\n",
     "src_quad = np.zeros((4, 2), np.float32)\n",
     "\n",
-    "# ═══ 3.  frame loop ═══════════════════════════════════════════════════\n",
+    "# ═ main loop ═════════════════════════════════════════════\n",
     "for rec in frames:\n",
     "    ok, frame = cap.read()\n",
     "    if not ok:\n",
     "        break\n",
-    "\n",
     "    if not rec[\"valid\"]:\n",
     "        out.write(frame)\n",
     "        continue\n",
     "\n",
-    "    dst_quad = np.array(rec[\"corners\"], np.float32)   # TL,TR,BR,BL\n",
+    "    dst = np.array(rec[\"corners\"], np.float32)\n",
+    "    ov_w = int(np.linalg.norm(dst[1] - dst[0]) + 0.5)\n",
+    "    ov_h = int(np.linalg.norm(dst[3] - dst[0]) + 0.5)\n",
     "\n",
-    "    # overlay size this frame\n",
-    "    ov_w = int(np.linalg.norm(dst_quad[1] - dst_quad[0]) + 0.5)   # top edge\n",
-    "    ov_h = int(np.linalg.norm(dst_quad[3] - dst_quad[0]) + 0.5)   # left edge\n",
+    "    # overscale + crop\n",
+    "    s = max(ov_w / mw, ov_h / mh) * 1.01\n",
+    "    big = cv2.resize(media, (math.ceil(mw * s), math.ceil(mh * s)), cv2.INTER_AREA)\n",
+    "    x0 = (big.shape[1] - ov_w) // 2\n",
+    "    y0 = (big.shape[0] - ov_h) // 2\n",
+    "    patch = big[y0 : y0 + ov_h, x0 : x0 + ov_w]\n",
     "\n",
-    "    # -------- always overscale *at least* one pixel larger -----------\n",
-    "    scale = max(ov_w / mw, ov_h / mh) * 1.01        # +1 % safety\n",
-    "    big   = cv2.resize(media,\n",
-    "                       (math.ceil(mw * scale), math.ceil(mh * scale)),\n",
-    "                       interpolation=cv2.INTER_AREA)\n",
-    "    bh, bw = big.shape[:2]\n",
+    "    scr = sample_screen(frame, dst, (ov_w, ov_h))\n",
+    "    patch = color_transfer(patch, scr, CT_STRENGTH)\n",
+    "    patch = match_luminance(patch, scr, HM_STRENGTH)\n",
+    "    patch = harmonise_texture(patch, scr, MAX_BLUR_PX, NOISE_GAIN)\n",
     "\n",
-    "    # centred crop to exact overlay size (keeps centre of mass)\n",
-    "    x0 = max(0, (bw - ov_w) // 2)\n",
-    "    y0 = max(0, (bh - ov_h) // 2)\n",
-    "    patch = big[y0:y0 + ov_h, x0:x0 + ov_w]\n",
+    "    soft = build_patch_mask(ov_h, ov_w, FEATHER_PX)\n",
     "\n",
-    "    # source quad matches patch\n",
-    "    ph, pw = patch.shape[:2]        # pw==ov_w , ph==ov_h\n",
+    "    ph, pw = patch.shape[:2]\n",
     "    src_quad[:] = [[0, 0], [pw - 1, 0], [pw - 1, ph - 1], [0, ph - 1]]\n",
-    "\n",
-    "    # -------- warp & composite ---------------------------------------\n",
-    "    H      = cv2.getPerspectiveTransform(src_quad, dst_quad)\n",
+    "    H = cv2.getPerspectiveTransform(src_quad, dst)\n",
     "    warped = cv2.warpPerspective(patch, H, (FW, FH))\n",
+    "    warped_mask = cv2.warpPerspective(soft, H, (FW, FH))\n",
     "\n",
-    "    mask   = cv2.warpPerspective(np.full((ph, pw), 255, np.uint8), H, (FW, FH))\n",
-    "    mask_i = cv2.bitwise_not(mask)\n",
-    "\n",
+    "    alpha = (warped_mask.astype(np.float32) / 255.0)[..., None]\n",
+    "    blended = (\n",
+    "        warped.astype(np.float32) * alpha + frame.astype(np.float32) * (1 - alpha)\n",
+    "    ).astype(np.uint8)\n",
     "    if ALPHA:\n",
-    "        base = cv2.addWeighted(frame, 1 - ALPHA, warped, ALPHA, 0)\n",
-    "        frame = cv2.bitwise_and(base, base, mask=mask) + cv2.bitwise_and(frame, frame, mask=mask_i)\n",
-    "    else:\n",
-    "        frame = cv2.bitwise_and(frame, frame, mask=mask_i) + cv2.bitwise_and(warped, warped, mask=mask)\n",
+    "        blended = cv2.addWeighted(frame, 1 - ALPHA, blended, ALPHA, 0)\n",
+    "    out.write(blended)\n",
     "\n",
-    "    out.write(frame)\n",
-    "\n",
-    "cap.release(); out.release()\n",
-    "print(\"✅  Media burned in – saved to\", VIDEO_OUT)\n"
+    "cap.release()\n",
+    "out.release()\n",
+    "print(\"✅  Media burned-in with tiny edge-blur — saved to\", VIDEO_OUT)\n"
    ]
   }
  ],
