Separate  app and fix formatting

--- a/notebooks/aruco-overlay.ipynb
+++ b/notebooks/aruco-overlay.ipynb
@@ -17,7 +17,7 @@
     "import cv2\n",
     "\n",
     "if hasattr(cv2, \"aruco\"):\n",
-    "    print(\"Aruco is available.\")\n"
+    "    print(\"Aruco is available.\")"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "\n",
     "with open(JSON_OUT, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(export, f, separators=(\",\", \":\"))  # compact, ~30-40 MB per minute @30 fps\n",
-    "print(f\"📄  JSON track file saved → {JSON_OUT}\")\n"
+    "print(f\"📄  JSON track file saved → {JSON_OUT}\")"
    ]
   }
  ],
