--- a/notebooks/overlay-replacement.ipynb
+++ b/notebooks/overlay-replacement.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "cap.release()\n",
     "out.release()\n",
-    "print(\"✅  Media burned-in with tiny edge-blur — saved to\", VIDEO_OUT)\n"
+    "print(\"✅  Media burned-in with tiny edge-blur — saved to\", VIDEO_OUT)"
    ]
   }
  ],
