--- a/notebooks/qr-generation.ipynb
+++ b/notebooks/qr-generation.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "img = qr.make_image(fill_color=\"black\", back_color=\"white\")\n",
     "\n",
-    "img.show()\n"
+    "img.show()"
    ]
   }
  ],
